# zodchy-alchemy

./: README.md  pyproject.toml
src/zodchy_alchemy/: __init__.py  contracts.py
src/zodchy_alchemy/adapters/: cqea.py
src/zodchy_alchemy/assemblers/: __init__.py  filters.py  joins.py  mutations.py  orders.py  queries.py  slices.py
src/zodchy_alchemy/serializers/: row.py
tests/: conftest.py  schema.py  test_cqea_adapter.py  test_filters_assembler.py  test_joins_assembler.py  test_mutation_assembler.py  test_orders_assembler.py  test_queries_assembler.py  test_slices_assembler.py
zodchy_alchemy/: __init__.py  contracts.py
zodchy_alchemy/adapters/: __init__.py  cqea.py
zodchy_alchemy/assemblers/: filters.py  joins.py  mutations.py  orders.py  queries.py  slices.py
zodchy_alchemy/serializers/: __init__.py  row.py
