[tool.poetry]
name = "zodchy-alchemy"
version = "0.1.9"
description = "SqlAlchemy query builder for Zodchy operators"
authors = ["Feofilaktov, Sergey <man@smairon.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.4"
zodchy = "^0.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
sqlalchemy-schema-factory = "^0.2.0"

[tool.poetry-dynamic-versioning]
enable = true

[build-systemsdf]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"