[tool.poetry]
name = "zodchy-alchemy"
version = "0.2.1"
description = "SqlAlchemy query builder for Zodchy operators"
authors = ["Feofilaktov, Sergey <man@smairon.ru>"]
readme = "README.md"
repository = "https://github.com/smairon/zodchy-alchemy"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0"
zodchy = "^0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
sqlalchemy-schema-factory = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"